--- a/index.html
+++ b/index.html
@@ -9,4 +9,6 @@
 </body>
 <script type="text/javascript" src="src/engineCore/core.js"></script>
 <script type="text/javascript" src="src/userControl.js"></script>
+<script type="text/javascript" src="src/lib/vector.js"></script>
+<script type="text/javascript" src="src/testDraw.js"></script>
 </html>
