--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>A 2D Game Physics Engine</title>
 </head>
 <body>
-<canvas id="canvas" style="border: 1px red solid"></canvas>
+<canvas id="canvas" style="border: 1px purple solid"></canvas>
 </body>
 <script type="text/javascript" src="src/engineCore/core.js"></script>
 <script type="text/javascript" src="src/userControl.js"></script>
