--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
 <body>
 <canvas id="canvas" style="border: 1px purple solid"></canvas>
 </body>
-<script type="text/javascript" src="src/engineCore/core.js"></script>
-<script type="text/javascript" src="src/userControl.js"></script>
-<script type="text/javascript" src="src/lib/vector.js"></script>
-<script type="text/javascript" src="src/testDraw.js"></script>
+<script type="module" src="src/engineCore/core.js"></script>
+<script type="module" src="src/userControl.js"></script>
+<script type="module" src="src/lib/vector.js"></script>
+<script type="module" src="src/testDraw.js"></script>
 </html>
