--- a/index.html
+++ b/index.html
@@ -4,11 +4,12 @@
     <meta charset="UTF-8">
     <title>A 2D Game Physics Engine</title>
 </head>
-<body>
+<body style="background-color: black">
 <canvas id="canvas" style="border: 1px purple solid"></canvas>
 </body>
+<script type="module" src="src/engineCore/screen.js"></script>
 <script type="module" src="src/engineCore/core.js"></script>
+<script type="module" src="src/game.js"></script>
 <script type="module" src="src/userControl.js"></script>
 <script type="module" src="src/lib/vector.js"></script>
-<script type="module" src="src/testDraw.js"></script>
 </html>
