--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>A 2D Game Physics Engine</title>
 </head>
 <body style="background-color: black">
-<canvas id="canvas" style="border: 1px purple solid"></canvas>
+<canvas id="canvas"></canvas>
 </body>
 <script type="module" src="src/engineCore/screen.js"></script>
 <script type="module" src="src/engineCore/core.js"></script>
