started implemetning rotation for player control

--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
 </body>
 <script type="module" src="src/engineCore/screen.js"></script>
 <script type="module" src="src/engineCore/core.js"></script>
-<script type="module" src="src/game.js"></script>
-<script type="module" src="src/userControl.js"></script>
+<script type="module" src="src/game/game.js"></script>
+<script type="module" src="src/game/userControl.js"></script>
+<script type="module" src="src/game/playerShip.js"></script>
 <script type="module" src="src/lib/vector.js"></script>
 </html>
