--- a/index.html
+++ b/index.html
@@ -14,4 +14,5 @@
 <script type="module" src="src/game/userControl.js"></script>
 <script type="module" src="src/game/playerShip.js"></script>
 <script type="module" src="src/lib/vector.js"></script>
+<script type="module" src="src/lib/object.js"></script>
 </html>
