implemented circle and triangle class

--- a/index.html
+++ b/index.html
@@ -15,4 +15,5 @@
 <script type="module" src="src/game/playerShip.js"></script>
 <script type="module" src="src/lib/vector.js"></script>
 <script type="module" src="src/lib/object.js"></script>
+<script type="module" src="src/rigidBody/rigidShape.js"></script>
 </html>
