Circle collison info

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 <script type="module" src="src/game/userControl.js"></script>
 <script type="module" src="src/game/playerShip.js"></script>
 <script type="module" src="src/lib/vector.js"></script>
-<script type="module" src="src/lib/object.js"></script>
+<script type="module" src="src/lib/collisionInfo.js"></script>
 <script type="module" src="src/rigidBody/rigidShape.js"></script>
+<script type="module" src="src/rigidBody/circleCollision.js"></script>
 </html>
