working on rectangle-rectangle collision

--- a/index.html
+++ b/index.html
@@ -17,4 +17,5 @@
 <script type="module" src="src/lib/vector.js"></script>
 <script type="module" src="src/lib/collisionInfo.js"></script>
 <script type="module" src="src/rigidBody/rigidShape.js"></script>
+<script type="module" src="src/rigidBody/rectangle.js"></script>
 </html>
