--- a/collisionDemo.html
+++ b/collisionDemo.html
@@ -12,7 +12,7 @@
 <script type="module" src="src/engineCore/screen.js"></script>
 <script type="module" src="src/engineCore/core.js"></script>
 <script type="module" src="src/engineCore/physics.js"></script>
-<script type="module" src="src/demo/dragDemo.js"></script>
+<script type="module" src="src/demo/collisionDemo.js"></script>
 <script type="module" src="src/demo/mover.js"></script>
 <script type="module" src="src/game/userControl.js"></script>
 <script type="module" src="src/game/playerShip.js"></script>
