--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>A 2D Game Physics Engine</title>
 </head>
-<body style="background-color: black">
+<body style= "height: 100%; background-color: black; display: flex; align-items: center; justify-content: center">
 <canvas id="canvas"></canvas>
 </body>
 <script type="module" src="src/engineCore/screen.js"></script>
