level design terrain

--- a/collisionDemo.html
+++ b/collisionDemo.html
@@ -15,9 +15,11 @@
 <script type="module" src="src/demo/collisionDemo.js"></script>
 <script type="module" src="src/demo/mover.js"></script>
 <script type="module" src="src/game/userControl.js"></script>
-<script type="module" src="src/game/playerShip.js"></script>
 <script type="module" src="src/lib/vector.js"></script>
 <script type="module" src="src/lib/collisionInfo.js"></script>
 <script type="module" src="src/rigidBody/rigidShape.js"></script>
 <script type="module" src="src/rigidBody/rectangle.js"></script>
+<script type="module" src="src/rigidBody/triangle.js"></script>
+<script type="module" src="src/rigidBody/circle.js"></script>
+
 </html>
