--- a/index.html
+++ b/index.html
@@ -8,13 +8,13 @@
 <canvas id="canvas"></canvas>
 </body>
 <script type="module" src="src/engineCore/screen.js"></script>
+<script type="module" src="src/rigidBody/rigidShape.js"></script>
 <script type="module" src="src/engineCore/core.js"></script>
 <script type="module" src="src/engineCore/physics.js"></script>
 <script type="module" src="src/game/game.js"></script>
+<script type="module" src="src/game/level.js"></script>
 <script type="module" src="src/game/userControl.js"></script>
 <script type="module" src="src/game/playerShip.js"></script>
 <script type="module" src="src/lib/vector.js"></script>
 <script type="module" src="src/lib/collisionInfo.js"></script>
-<script type="module" src="src/rigidBody/rigidShape.js"></script>
-<script type="module" src="src/rigidBody/rectangle.js"></script>
 </html>
