--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <script type="module" src="src/engineCore/core.js"></script>
 <script type="module" src="src/engineCore/physics.js"></script>
 <script type="module" src="src/game/game.js"></script>
-<script type="module" src="src/game/level.js"></script>
+<script type="module" src="src/game/level/level.js"></script>
 <script type="module" src="src/game/userControl.js"></script>
 <script type="module" src="src/game/playerShip.js"></script>
 <script type="module" src="src/lib/vector.js"></script>
