--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>A 2D Game Physics Engine</title>
 </head>
 <body style= "height: 100%; background-color: black; display: flex; align-items: center; justify-content: center">
-<canvas id="canvas"></canvas>
+<canvas style="height:650px;" id="canvas"></canvas>
 </body>
 <script type="module" src="src/engineCore/screen.js"></script>
 <script type="module" src="src/rigidBody/rigidShape.js"></script>
