game restart, UI

--- a/dragDemo.html
+++ b/dragDemo.html
@@ -5,15 +5,16 @@
     <title>A 2D Game Physics Engine - Drag Demo</title>
 </head>
 <body style="background-color: black">
-<canvas id="canvas"></canvas>
+<canvas style="height:650px;" id="canvas"></canvas>
 <button id = "start">Start</button>
 <button id = "clear">Clear</button>
 </body>
 <script type="module" src="src/engineCore/screen.js"></script>
 <script type="module" src="src/engineCore/core.js"></script>
 <script type="module" src="src/engineCore/physics.js"></script>
-<script type="module" src="src/demo/dragDemo.js"></script>
-<script type="module" src="src/demo/mover.js"></script>
+<script type="module" src="src/demo/engineLoop.js"></script>
+<script type="module" src="src/demo/drag/dragDemo.js"></script>
+<script type="module" src="src/demo/drag/mover.js"></script>
 <script type="module" src="src/game/userControl.js"></script>
 <script type="module" src="src/game/playerShip.js"></script>
 <script type="module" src="src/lib/vector.js"></script>
