--- a/index.html
+++ b/index.html
@@ -17,4 +17,5 @@
 <script type="module" src="src/game/playerShip.js"></script>
 <script type="module" src="src/lib/vector.js"></script>
 <script type="module" src="src/lib/collisionInfo.js"></script>
+<script type="module" src="src/game/ui.js"></script>
 </html>
