--- a/collisionDemo.html
+++ b/collisionDemo.html
@@ -4,16 +4,20 @@
     <meta charset="UTF-8">
     <title>A 2D Game Physics Engine - Drag Demo</title>
 </head>
-<body style="background-color: black">
-<canvas id="canvas"></canvas>
+<body style="background-color: black; display: flex; flex-direction: row;">
+<canvas style="height:650px;" id="canvas"></canvas>
+<div style ="margin-left: 3em">
+<div id="info" style="color:white; height:630px;"></div>
 <button id = "start">Start</button>
 <button id = "clear">Clear</button>
+</div>
 </body>
 <script type="module" src="src/engineCore/screen.js"></script>
 <script type="module" src="src/engineCore/core.js"></script>
 <script type="module" src="src/engineCore/physics.js"></script>
-<script type="module" src="src/demo/collisionDemo.js"></script>
-<script type="module" src="src/demo/mover.js"></script>
+<script type="module" src="src/demo/engineLoop.js"></script>
+<script type="module" src="src/demo/collision/collisionDemo.js"></script>
+<script type="module" src="src/demo/drag/mover.js"></script>
 <script type="module" src="src/game/userControl.js"></script>
 <script type="module" src="src/lib/vector.js"></script>
 <script type="module" src="src/lib/collisionInfo.js"></script>
