--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 <script type="module" src="src/rigidBody/rigidShape.js"></script>
 <script type="module" src="src/engineCore/core.js"></script>
 <script type="module" src="src/engineCore/physics.js"></script>
+<script type="module" src="src/engineCore/loop.js"></script>
 <script type="module" src="src/game/game.js"></script>
 <script type="module" src="src/game/level/level.js"></script>
 <script type="module" src="src/game/userControl.js"></script>
