--- a/index.html
+++ b/index.html
@@ -22,12 +22,21 @@
 <main>
     <article>
         <h1 class="title">2D Game Physics Engine</h1>
-        <a href="basic/minimal.html" target="_blank">Minimal Example</a> (code) <br>
+        <a href="basic/minimal.html" target="_blank">Minimal Example</a> <a href="https://github.com/mgraves236/2D-game-physics-engine/blob/gh-pages/basic/minimal.html" target="_blank">(code)</a><br>
         <a href="basic/dragDemo.html" target="_blank">Drag Demo</a> <br>
         <a href="basic/collisionDemo.html" target="_blank">Collision Demo</a> <br>
         <a href="game/game.html" target="_blank">Game</a> <br>
     </article>
+    <article>
+        <a href="https://github.com/mgraves236/2D-game-physics-engine/tree/gh-pages" target="_blank"><i class="fab fa-github"></i> See code on Github</a>
+    </article>
+    <article>
+        <h3>Documentation:</h3>
+        <ul>
+            <li><a href="basic/documentation/index.html" target="_blank">engine</a></li>
+            <li><a href="game/documentation/index.html" target="_blank">game</a></li>
+        </ul>
+    </article>
 </main>
-<footer>&copy; Magdalena Gołębiowska</footer>
 </body>
 </html>
