--- a/index.html
+++ b/index.html
@@ -22,6 +22,8 @@
 <main>
     <article>
         <h1 class="title">2D Game Physics Engine</h1>
+        <p>This project was a part of my Bachelor thesis. The objective was to implemet a simple 2D Game Physics
+            Engine in JavaScript. </p>
         <a href="basic/minimal.html" target="_blank">Minimal Example</a> <a href="https://github.com/mgraves236/2D-game-physics-engine/blob/gh-pages/basic/minimal.html" target="_blank">(code)</a><br>
         <a href="basic/dragDemo.html" target="_blank">Drag Demo</a> <br>
         <a href="basic/collisionDemo.html" target="_blank">Collision Demo</a> <br>
